# trajectory_optimizer

./: CMakeLists.txt  LICENSE  README.md  package.xml
TROm/: CURVATUREsolver.m  CURVATUREsolver.mexa64  CURVATUREsolver_casadi.c  CURVATUREsolver_casadi.h  CURVATUREsolver_casadi2forces.c  FsolverTRO_FORCES.m  TRO_FORCES.m  TRO_ez.m  color_plots.m  console.m  endurance.csv  f_values.c  fcurvature.m  finalCURVATUREsolver.mexa64  finalCURVATUREsolver_casadi.c  finalCURVATUREsolver_casadi.h  finalCURVATUREsolver_casadi2forces.c  gen.c  gen2.c  generate_solver.m  gro_sgf.csv  heading_calculation.m  mpc.m  plots.m  progress.m  savitzkygolay.m  solverTRO_FORCES.m  solverTRO_ipopt.m  solverTRO_multiple.m  solverTRO_single.m  solver_p1.m  solver_p2.m  stdout_temp  tf_output.m
TROm/TROplots/: color_plots.m  curvaturePlots.m  heading_calculation.m  progress.m
TROm/Tracks/: AutoXTFGDef.mat  Circuit2_s0_window601.csv  EnduranceSpain.mat  Italy2019.txt  SkidpadTFGDef.mat  Spain2019.txt  TrackTFGDef.mat  circuit2.txt  circuit3.txt  dist.m  gro2_0.0490.csv  gro2_0.0490_0_1001.csv  gro2_0.0490_0_501.csv  gro2_0.0490_0_601.csv  gro2_0.0490_0_701.csv  gro3_0.0490.csv  gro_0.0490.csv  gro_0.0490_0.5.csv  gro_0.0490_0.75.csv  gro_0.0490_0_101.csv  gro_0.0490_0_301.csv  gro_0.0490_0_501.csv  gro_0.0490_0_601.csv  gro_0.0490_0_701.csv  gro_0.0490_1.5.csv  gro_0.0490_1.csv  gro_0.0490_2.csv  gro_0.0490_2_1001.csv  gro_0.0490_3.csv  gro_0.0490_4.csv  gro_0.0490_5.csv
TROm/params_albert/: hl.txt  (+7 more)
cfg/: dynamic.cfg  dynamicTRO.cfg
data/: curvature.csv  filtered_curvature.csv  freeSpace.csv  midline_points.csv  optimal_points.csv  problem.csv  stdout_temp  x_opt.csv
docs/: tro_colorplot.eps  tro_traj.eps  tro_vx.eps  tro_vy.eps  tro_w.eps
include/: GRO.hh  TRO.hh  optimizer.hh
launch/: all_in_one.launch  midline.launch  optimizer.launch  tro.launch
params/: gro.yaml  optimizer.yaml  tro.yaml
scripts/: Germany2019.txt  color_plots.m  curvaturePlots.m  curvature_plots.m  heading_calculation.m  progress.m
src/: GRO.cpp  TRO.cpp  main.cpp  midline.cpp  opt.cpp  optimizer.cpp
(+30 files in other folders)
